# bkplayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BKPlayer.cpp  CMakeLists.txt  JNICallbakcHelper.cpp  VideoChannel.cpp  native-lib.cpp
app/src/main/cpp/include/: BKPlayer.h  BaseChannel.h  VideoChannel.h  log4c.h  safe_queue.h
app/src/main/java/com/wulala/bkplayer/: BKJavaPlayer.kt  BKPlayer.kt  FFMPEG.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
